# Japanese-Font-Library-PresetBuilder

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  run.cmd
.github/: pull_request_template.md
.github/workflows/: python-tests.yml
data/: fontconfig_ja_template.txt  fonts_core.swf  template_preset.yml  template_preset_1.0.0rc2.yml  template_settings.yml  template_settings_1.0.0rc2.yml  test_preset_1.0.0rc2.yml  test_settings_1.0.0rc2.yml  validNameChars.txt
data/lang/: en-us.yml  ja-jp.yml
src/: const.py
src/gui/: main_controller.py  main_window.py
src/models/: cache.py  preset.py  settings.py  user_config.py
src/modules/: find_preview_image.py  generator.py  swf_parser.py
src/utils/: dprint.py  i18n.py
tests/: test_cache.py  test_find_preview_image.py  test_preset.py  test_settings.py
