[project]
name = "tesvfontpresetbuilder"
version = "1.0.1"
description = "Project for developing fontspresetbuilder for Skyrim (Oldrim/LE/SE/AE/VR)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
